[project]
name = "scpyodide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab-fasta>=3.3.0",
    "jupyterlab>=4.3.3",
    "jupyterlite-core>=0.4.5",
    "jupyterlite-javascript-kernel>=0.3.0",
    "jupyterlite-pyodide-kernel>=0.4.5",
    "notebook>=7.3.1",
    "jupyterlab-night>=0.4.6",
    "ipywidgets>=8.1.5",
    "ipyevents>=2.0.2",
    "ipympl>=0.9.4",
    "ipycanvas>=0.13.3",
    "plotly>=5.24.1",
    "bqplot>=0.12.43",
    "jupyter-server>=2.14.2",
    "libarchive-c>=5.1",
    "duckdb>=1.1.3",
    "magic-duckdb>=0.1.27",
    "pandas>=2.2.3",
]
